# os

./: CMakeLists.txt  clang.cmake  linker.ld
inc/: console.h.asm  disk.asm  gdt.asm  memory.h.asm  partition.asm  vga.h.asm
lib/: console.asm  memory.asm  vga.asm
src/: boot.asm  main.c  stage.asm
